Primeira aula concluída

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="sidebar">
         <nav class="sidebar_navigation">
-            <div>
+            <div class="logo">
                 <a href="#">
                     <img src="/icons/logo-spotify.png" alt="Logo do Spotify">
                 </a>
+                </div>
                 <div>
                     <ul>
                         <li>
@@ -30,6 +32,15 @@
                         </li>
                     </ul>
                 </div>
+                <section class="biblioteca">
+                    <div>
+                        <a href="#">
+                            <span class="fa-solid fa-book"></span>
+                            <span>Sua biblioteca</span>
+                            <span><a href="#" class="bottom-adicao">+</a></span>
+                        </a>
+                    </div>
+                </section>
             </div>
         </nav>
     </div>
