Segunda aula concluída

--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="sidebar">
         <nav class="sidebar_navigation">
             <div class="logo">
-                <a href="#">
-                    <img src="/icons/logo-spotify.png" alt="Logo do Spotify">
+                <a href="">
+                    <img src="/icons/logo-spotify.png" alt="Logo" />
                 </a>
-                </div>
-                <div>
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <span class="fa-solid fa-house"></span>
-                                <span>Início</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-solid fa-search"></span>
-                                <span>Buscar</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <section class="biblioteca">
-                    <div>
-                        <a href="#">
-                            <span class="fa-solid fa-book"></span>
-                            <span>Sua biblioteca</span>
-                            <span><a href="#" class="bottom-adicao">+</a></span>
-                        </a>
-                    </div>
-                </section>
             </div>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="fa-solid fa-home"></span>
+                        <span>Início</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa-solid fa-search"></span>
+                        <span>Buscar</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
+
+        <div class="library">
+            <div class="library_content">
+                <button class="library_button">
+                    <span class="fa-solid fas fa-book"></span>
+                    <span>Sua biblioteca</span>
+                </button>
+                <span class="fa-solid fa-plus"></span>
+            </div>
+
+            <section class="section-playlist">
+                <div class="section-playlist_content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">É fácil, vamos te ajudar.</span>
+                    <button class="section-playlist_button">
+                        <span>Criar playlist</span>
+                    </button>
+                </div>
+            </section>
+
+            <div class="cookies">
+                <a href="#">Cookies</a>
+            </div>
+
+            <div class="languages">
+                <button class="languages_button">
+                    <span class="fa-solid fa-globe"></span>
+                    <span>Português do Brasil</span>
+                </button>
+            </div>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-background">
+            <div class="footer-text">
+                <span>TESTAR O PREMIUM DE GRAÇA</span>
+                <span>Increva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</span>
+            </div>
+            <div class="footer-button-container">
+                <button class="footer-button">Increva-se grátis</button>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
