--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
                                 <!-- CARD 1 -->
                                 <a href="" class="cards">
                                     <div class="cards card1">
-                                        <img src="./src/assets/playlist/1.jpeg" alt="" />
+                                        <img src="playlist/1.jpeg" alt="" />
                                         <span>Boas festas</span>
                                     </div>
                                 </a>
@@ -116,7 +116,7 @@
                                 <!-- CARD 2 -->
                                 <a href="" class="cards">
                                     <div class="cards card2">
-                                        <img src="./src/assets/playlist/2.png" alt="" />
+                                        <img src="playlist/2.png" alt="" />
                                         <span>Feitos para você</span>
                                     </div>
                                 </a>
@@ -124,7 +124,7 @@
                                 <!-- CARD 3 -->
                                 <a href="" class="cards">
                                     <div class="cards card3">
-                                        <img src="./src/assets/playlist/3.jpeg" alt="" />
+                                        <img src="playlist/3.jpeg" alt="" />
                                         <span>Lançamentos</span>
                                     </div>
                                 </a>
@@ -132,7 +132,7 @@
                                 <!-- CARD 4 -->
                                 <a href="" class="cards">
                                     <div class="cards card4">
-                                        <img src="./src/assets/playlist/4.jpeg" alt="" />
+                                        <img src="playlist/4.jpeg" alt="" />
                                         <span>Creators</span>
                                     </div>
                                 </a>
@@ -140,7 +140,7 @@
                                 <!-- CARD 5 -->
                                 <a href="" class="cards">
                                     <div class="cards card5">
-                                        <img src="./src/assets/playlist/5.jpeg" alt="" />
+                                        <img src="playlist/5.jpeg" alt="" />
                                         <span>Para treinar</span>
                                     </div>
                                 </a>
@@ -148,7 +148,7 @@
                                 <!-- CARD 6 -->
                                 <a href="" class="cards">
                                     <div class="cards card6">
-                                        <img src="./src/assets/playlist/6.jpeg" alt="" />
+                                        <img src="playlist/6.jpeg" alt="" />
                                         <span>Podcasts</span>
                                     </div>
                                 </a>
@@ -156,7 +156,7 @@
                                 <!-- CARD 7 -->
                                 <a href="" class="cards">
                                     <div class="cards card7">
-                                        <img src="./src/assets/playlist/7.jpeg" alt="" />
+                                        <img src="playlist/7.jpeg" alt="" />
                                         <span>Sertanejo</span>
                                     </div>
                                 </a>
@@ -164,7 +164,7 @@
                                 <!-- CARD 8 -->
                                 <a href="" class="cards">
                                     <div class="cards card8">
-                                        <img src="./src/assets/playlist/8.jpeg" alt="" />
+                                        <img src="playlist/8.jpeg" alt="" />
                                         <span>Samba e pagode</span>
                                     </div>
                                 </a>
@@ -172,7 +172,7 @@
                                 <!-- CARD 9 -->
                                 <a href="" class="cards">
                                     <div class="cards card9">
-                                        <img src="./src/assets/playlist/9.jpeg" alt="" />
+                                        <img src="playlist/9.jpeg" alt="" />
                                         <span>Funk</span>
                                     </div>
                                 </a>
@@ -180,7 +180,7 @@
                                 <!-- CARD 10 -->
                                 <a href="" class="cards">
                                     <div class="cards card10">
-                                        <img src="./src/assets/playlist/10.jpeg" alt="" />
+                                        <img src="playlist/10.jpeg" alt="" />
                                         <span>MPB</span>
                                     </div>
                                 </a>
@@ -188,7 +188,7 @@
                                 <!-- CARD 11 -->
                                 <a href="" class="cards">
                                     <div class="cards card11">
-                                        <img src="./src/assets/playlist/11.jpeg" alt="" />
+                                        <img src="playlist/11.jpeg" alt="" />
                                         <span>Rock</span>
                                     </div>
                                 </a>
@@ -196,7 +196,7 @@
                                 <!-- CARD 12 -->
                                 <a href="" class="cards">
                                     <div class="cards card12">
-                                        <img src="./src/assets/playlist/12.jpeg" alt="" />
+                                        <img src="playlist/12.jpeg" alt="" />
                                         <span>Hip Hop</span>
                                     </div>
                                 </a>
@@ -204,7 +204,7 @@
                                 <!-- CARD 13 -->
                                 <a href="" class="cards">
                                     <div class="cards card13">
-                                        <img src="./src/assets/playlist/13.jpeg" alt="" />
+                                        <img src="playlist/13.jpeg" alt="" />
                                         <span>Indie</span>
                                     </div>
                                 </a>
@@ -212,7 +212,7 @@
                                 <!-- CARD 14 -->
                                 <a href="" class="cards">
                                     <div class="cards card14">
-                                        <img src="./src/assets/playlist/14.jpeg" alt="" />
+                                        <img src="playlist/14.jpeg" alt="" />
                                         <span>Relax</span>
                                     </div>
                                 </a>
@@ -220,7 +220,7 @@
                                 <!-- CARD 15 -->
                                 <a href="" class="cards">
                                     <div class="cards card15">
-                                        <img src="./src/assets/playlist/15.jpeg" alt="" />
+                                        <img src="playlist/15.jpeg" alt="" />
                                         <span>Música Latina</span>
                                     </div>
                                 </a>
