--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/vars.css">
     <link rel="stylesheet" href="styles/sidebar-footer.css">
     <link rel="stylesheet" href="styles/main-content.css">
+    <link rel="stylesheet" href="styles/media-queries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -261,6 +262,7 @@
             <button type="button">Increva-se grátis</button>
         </div>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
